
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int INIT_SSL () ;
 int NID_md5 ;
 char* OBJ_nid2sn (int) ;

const char *
keytype_name(
        int nid
        )
{
        static const char unknown_type[] = "(unknown key type)";
        const char *name;







        if (NID_md5 == nid)
                name = "MD5";
        else
                name = unknown_type;

        return name;
}
